deployments/Kustomize/consul-api/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: consul-api
