deployments/Kustomize/consul-api/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: consul-api
spec:
  rules:
  - host: dev-consul-api.sample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-api
          servicePort: 80
